--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -4,7 +4,7 @@ header {
     overflow: hidden;
 }
 
-.header__container {
+.header-container {
     text-align: center;
     height: 100%;
     position: relative;
@@ -17,17 +17,20 @@ header {
     justify-content: center;
 }
 
-.header__socials {
+.header-socials {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 0.8rem;
+    
     position: absolute;
     left: 0;
     bottom: 0;
+
+    font-size: 1.5rem;
 }
 
-.header__socials::after{
+.header-socials::after{
     content: '';
     width: 1px;
     height: 2rem;
@@ -38,16 +41,63 @@ header {
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    border: 0.4rem solid var(--color-primary);
+    border: 0.3rem solid var(--color-primary);
     padding: 0.25rem;
 }
 
 .me {
-    width: 22rem;
-    height: 22rem;
+    width: 13rem;
+    height: 13rem;
     position: absolute;
-    left: calc(50% - 11rem);
+    left: calc(50% - (13rem / 2));
     margin-top: 4rem;
     overflow: hidden;
-    /* padding: 5rem 1.5rem 1.5rem 1.5rem; */
+}
+
+@media screen and (min-width: 1024px) {
+    header {
+        transition: var(--transition);
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    header {
+        transition: var(--transition);
+        height: 80vh;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    header {
+        height: 100vh;
+    }
+
+    .header-socials {
+        width: 100%;
+        
+        flex-direction: row;
+        
+        gap: 2rem;
+        justify-content: center;
+        align-items: center;
+
+        bottom: 3rem;
+        font-size: 2rem;
+    }
+    
+    .header-socials::after {
+        display: none;
+    }
+}
+
+@media screen and (max-height: 700px) {
+    header {
+        height: 120vh;
+    }
+}
+
+@media screen and (min-height: 700px) and (max-height: 770px) {
+    header {
+        height: 105vh;
+    }
 }
