--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,6 @@
 }
 
 :root {
-    /* font-size: 62.5%;     */
-
     --color-bg: #1f1f38;
     --color-bg-variant: #2c2c6c;
     --color-primary: #4db5ff;
@@ -36,15 +34,26 @@ html {
 }
 
 body {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+
     font-family: "Poppins", sans-serif;
     
-    background: var(--color-bg);
     color: var(--color-white);
 
     line-height: 1.7;
-    background-image: url("../src/assets/images/bg-texture.png");
+
+    background-color: #0f0e13;
 }
 
+.gradient-bg-welcome {
+    /* width: 100vh; */
+    /* height: 100vh; */
+    background:
+        radial-gradient(at 0% 0%, hsla(253, 16%, 7%, 1), transparent 50%),
+        radial-gradient(at 50% 0%, hsla(225, 39%, 30%, 1), transparent 50%),
+        radial-gradient(at 100% 0%, hsla(339, 49%, 30%, 1), transparent 50%);
+}
 
 .container {
     width: var(--container-width-lg);
@@ -59,23 +68,9 @@ h1 {
     font-size: 2.5rem;
 }
 
-section {
-    margin-top: 8rem;
-}
-
-section > h2, 
-section > h5 {
-    text-align: center;
-    color: var(--color-light);
-}
-
-section > h2 {
-    color: var(--color-primary);
-    margin-bottom: 3rem;
-}
-
 .text-light {
     color: var(--color-light);
+    font-size: 1.1rem;
 }
 
 a {
