--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -9,7 +9,7 @@ header {
     
     height: 100%;
 
-    background-color: rgba(255, 0, 0, .5);
+    /* background-color: rgba(255, 0, 0, .5); */
     padding-top: 7rem;
 }
 
@@ -18,7 +18,7 @@ header {
     justify-content: center;
     flex-direction: row;
     align-items: center;
-    gap: 0.8rem;
+    gap: 2rem;
     
     left: 0;
     bottom: 0;
